# SlayMySanity

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  slay_my_sanity
include/core/: engine.h  map.h  render.h  scene.h
include/core/ui/: font.h  widget.h
include/graphics/: animation.h  camera.h  render.h  sprite.h
include/ui/: font.h  input.h  manager.h  ui.h  widget.h
include/util/: error.h  helper.h  window.h
include/world/: map.h  object.h  physics.h  player.h
src/: main.c
src/core/: engine.c  map.c  render.c  scene.c
src/core/ui/: font.c  widget.c
src/graphics/: animation.c  camera.c  render.c  sprite.c
src/ui/: font.c  input.c  manager.c  ui.c  widget.c
src/util/: error.c  helper.c  window.c
src/world/: map.c  object.c  physics.c  player.c
